--- a/code.ipynb
+++ b/code.ipynb
@@ -14,11 +14,21 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Load the datasets (replace with your local file paths)\n",
+    "# Load and inspect the datasets\n",
     "X_train = pd.read_parquet('X_train.parquet')\n",
     "X_test = pd.read_parquet('X_test_reduced.parquet')\n",
-    "y_train = pd.read_parquet('y_train.parquet')['break'].values  # Assuming 'break' is the column name\n",
-    "\n",    
+    "y_train_df = pd.read_parquet('y_train.parquet')\n",
+    "\n",
+    "# Inspect y_train to determine the correct column or structure\n",
+    "print(y_train_df.head())\n",
+    "print(y_train_df.columns)\n",
+    "\n",
+    "# Adjust based on inspection (example assumes 'structural_break' as column name)\n",
+    "if len(y_train_df.columns) > 0:\n",
+    "    y_train = y_train_df['structural_break'].values  # Replace 'structural_break' with actual column name\n",
+    "else:\n",
+    "    y_train = y_train_df.values  # If it's a Series with values as labels\n",
+    "\n",
     "# Function to extract features from time series\n",
     "def extract_features(df, boundary_point):\n",
     "    features = []\n",
@@ -47,7 +57,7 @@
     "    return pd.DataFrame(features, index=df.index.get_level_values('id').unique())\n",
     "\n",
     "# Extract features\n",
-    "X_train_features = extract_features(X_train, boundary_point=None)  # Boundary from 'period' column\n",
+    "X_train_features = extract_features(X_train, boundary_point=None)\n",
     "X_test_features = extract_features(X_test, boundary_point=None)\n",
     "\n",
     "# Scale features\n",
